--- a/app/src/main/res/layout/theview.xml
+++ b/app/src/main/res/layout/theview.xml
@@ -15,15 +15,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/theimage"
             android:layout_width="10dp"
             android:layout_height="100dp"
             android:layout_marginTop="4dp"
-            android:layout_weight="1"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/thetitle"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
             android:layout_marginStart="4dp"
